corrected the alignment of sponsors images

--- a/styles.css
+++ b/styles.css
@@ -305,12 +305,12 @@ a:link{
 }
 
 .das-logo{
-    text-align: center;
+    
     margin: auto;
 }
 
 .gmc-logo{
-    text-align:center;
+    
 }
 
 img{
